Modify javafx module